<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBACKGROUNDgreen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar15"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/welcome"
        android:textColor="@color/colorDARKgreen"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:text="@string/chat_error1"
        android:textColor="@color/colorDARKgreen"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cha_error2"
        android:layout_below="@id/textView5"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/colorDARKgreen"
        android:textSize="16sp"

        />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/create_acc"
        android:textColor="@color/colorWhite"
        app:backgroundTint="@color/colorLIGHTredpink" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/Login"
        android:textColor="@color/colorWhite"
        app:backgroundTint="@color/colorLIGHTredpink" />
</RelativeLayout>