<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:background="@color/colorBACKGROUNDgreen"
    >

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar9"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/welcome"
        android:textColor="@color/colorDARKgreen"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"
        android:text="@string/successful"
        android:textColor="@color/colorDARKgreen"
        android:textSize="18sp" />

    <Button
        android:id="@+id/NextButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text3"
        android:layout_marginLeft="20dp"
        android:background="@color/colorLIGHTredpink"
        android:text="@string/next"
        android:textColor="@color/colorWhite"
        app:backgroundTint="@color/colorLIGHTredpink" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/tomap"
        android:textColor="@color/colorDARKgreen"
        android:textSize="16sp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="?attr/homeAsUpIndicator" />
</RelativeLayout>