<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8D7C1"

    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:titleTextColor="@color/colorWhite" />


    <Button
        android:id="@+id/changeMyLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="80dp"
        android:layout_marginRight="17dp"
        android:background="@color/colorGREY"
        android:text="@string/changeLang"
        app:backgroundTint="@color/colorGREY" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:src="@drawable/logo3" />

    <!--Button:Log in-->
    <Button
        android:id="@+id/login_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@color/colorLIGHTredpink"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        app:backgroundTint="@color/colorLIGHTredpink" />

    <!--Button:Register-->
    <Button
        android:id="@+id/register_btn"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="110dp"
        android:background="@color/colorLIGHTredpink"
        android:text="@string/signup"
        android:textColor="@color/colorWhite"
        app:backgroundTint="@color/colorLIGHTredpink" />

    <Button
        android:id="@+id/buttonchat_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:text="Chat"
        app:backgroundTint="@color/colorGREY" />

    <TextView
        android:id="@+id/guest_click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        android:gravity="center"
        android:text="@string/guest"
        android:textColor="@color/colorDARKgreen"
        android:textIsSelectable="true"
        android:textSize="18sp"
        android:textStyle="bold" />



</RelativeLayout>