<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBACKGROUNDgreen"
    >

    <TextView
        android:id="@+id/itemName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar13"
        android:layout_centerHorizontal="true"
        android:text="@string/art_museum"
        android:textColor="@color/colorDARKgreen"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="237dp"
        android:layout_below="@id/itemName1"
        android:layout_alignParentLeft="false"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/museum" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="false"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:text="Address: Jasonerie Street 14" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:text="Opening hours: 10:00 - 18:00" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:text="Phone Number: +439248204" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="400dp"
        android:background="@color/colorDARKyellow" />

    <TextView
        android:id="@+id/textViewTEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/feedback_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider2"
        android:layout_alignLeft="@id/textViewTEXT"
        android:layout_marginLeft="258dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorLIGHTredpink"
        android:text="@string/feedback_button"
        android:textColor="@color/colorWhite"
        app:backgroundTint="@color/colorLIGHTredpink" />

    <ListView
        android:id="@+id/feedbacks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/button"
        android:layout_marginTop="5dp"
        android:divider="@color/colorDARKyellow"
        android:dividerHeight="1dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="?attr/actionModeCloseDrawable" />
</RelativeLayout>